# parser

./: ARCH_SHORTLIST.md  GITHUB_PROFILE_README.md  README.md  docker-compose.yml
.github/workflows/: remote-qa.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
backend/app/: catalog.py  config.py  errors.py  profile.py  schema_builder.py  schemas.py
backend/app/api/: routes.py
backend/app/services/: document_loader.py  extractor.py  normalizer.py
backend/tests/: conftest.py  test_api.py  test_document_loader.py  test_extractor.py  test_profile.py  test_schema_builder.py
backend/tests/fixtures/: sample_cv.txt
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.ts  types.ts
frontend/src/api/: client.ts
frontend/src/components/: BulkShortlist.tsx  CustomFieldEditor.tsx  FieldPicker.tsx  JobManager.tsx  ProfilePresets.tsx  ResultView.tsx  ResumeDropzone.tsx  ShortlistLeaderboard.tsx  ShortlistResults.tsx
frontend/src/pages/: ConfigurePage.tsx  ResultPage.tsx
frontend/src/store/: profile.ts  result.ts
qdrant_storage/: raft_state.json
qdrant_storage/collections/job_descriptions/0/: newest_clocks.json  replica_state.json
shortlist_agent/: Dockerfile  main.py  pyproject.toml
shortlist_agent/app/: config.py  schemas.py
shortlist_agent/app/api/: routes.py
shortlist_agent/app/services/: qdrant_service.py  scoring_service.py
(+26 files in other folders)
